[gd_scene load_steps=7 format=3 uid="uid://chscljd7vhtjs"]

[ext_resource type="StyleBox" uid="uid://dqju44gd4vpl0" path="res://scenes/label_main_panel1.tres" id="1_7k6o7"]
[ext_resource type="Script" path="res://scripts/try_again.gd" id="1_72ure"]
[ext_resource type="Texture2D" uid="uid://bcv7lja3lu16g" path="res://My Game Assets/Final Assets/dllhost_ewJVhBY4H2.png" id="2_vb5t6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x4qsx"]
texture = ExtResource("2_vb5t6")

[sub_resource type="SystemFont" id="SystemFont_ofkjd"]
font_names = PackedStringArray("Nasalization")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_enumh"]
font = SubResource("SystemFont_ofkjd")
font_size = 40
outline_size = 5
outline_color = Color(0, 0.690196, 1, 1)

[node name="try_again" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_72ure")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -182.0
offset_right = 468.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_7k6o7")

[node name="Panel2" type="Panel" parent="Control/MarginContainer"]
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_x4qsx")

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Try again!"
label_settings = SubResource("LabelSettings_enumh")

[node name="Retry" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="main_menu" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="quit" type="Button" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/Retry" to="Control" method="_on_retry_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
